# gazette

./: .env.example  .gitignore  AGENTS.md  README.md  backlog.md  deploy.sh  docker-compose.yml  dockerfile  makefile  pyproject.toml  watermarks.example.json
.github/workflows/: build-and-push.yml  release.yml  tests.yml
02-signal-http-client/: README.md  archived.md
03-build-from-source/: archived.md
05-ci-ghcr/: README.md  archived.md
06-service-skeleton/: README.md
07-quadlet-golive/: archived.md
08-music-graph/: archived.md
architecture/docs/gazette-prod-guardrails/: decision.md
calendrical-rot-double-post/: README.md
docs/runbooks/: prod-publishing.md
gazette/: pyproject.toml
gazette-prod-guardrails/: README.md  archived.md
gazette/src/dynamicalsystem/gazette/: __init__.py  __main__.py  alerts.py  app.py  cli.py  config.py  content.py  log.py  publish_guard.py  publishers.py  review.py  utils.py  watermarks.py
ooda/: README.md
ooda/01-config-module/: README.md  archived.md
ooda/02-signal-http-client/: README.md
ooda/03-build-from-source/: README.md
ooda/04-oci-vault-deploy/: README.md  archived.md
ooda/05-ci-ghcr/: README.md
ooda/06-service-skeleton/: README.md  archived.md
ooda/07-quadlet-golive/: README.md
ooda/08-music-graph/: README.md
ooda/08-music-graph/act/: spike-signal-receive.md
ooda/08-music-graph/observe/: gig-coordination-journey.md  observations.md
ooda/08-music-graph/orient/: coordination-primitive.md  identity.md
prod-path-firing-investigation/: README.md  archived.md
pytests/: README.md  pyproject.toml
pytests/src/dynamicalsystem/pytests/: __main__.py  environment.py  test_config.py  test_content.py  test_content_faults.py  test_environment.py  test_gazette.py  test_publish_failures.py  test_publish_guard.py  test_publishers.py  test_service.py  test_signal_client.py  test_utils.py  test_watermarks.py
scripts/: build-env.sh
spikes/: muster_receive_spike.py
