[project]
name = "dynamicalsystem.gazette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gazette",
]

[tool.uv.workspace]
members = ["gazette", "pytests"]

[tool.uv.sources]
gazette = { workspace = true }
pytests = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytests",
]
