[project]
name = "gazette-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "gazette",
    "dynamicalsystem-pytests",
]

[tool.uv.sources]
dynamicalsystem-gazette = { workspace = true }
dynamicalsystem-pytests = { path = "pytests", editable = true }

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "dynamicalsystem-gazette>=0.1.0",
    "dynamicalsystem-pytests>=0.1.0",
]