[project]
name = "dynamicalsystem.gazette"
version = "0.1.3"
description = "POSSE Publisher"
readme = "README.md"
authors = [
    { name = "Simon Horrobin", email = "simon@dynamicalsystem.com" }
]
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.56",
    "dynamicalsystem.halogen>=0.1.2",
    "requests>=2.32.3",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
gazette = "dynamicalsystem.gazette:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dynamicalsystem"]